New model files included